--- a/arch/arm64/boot/dts/rockchip/rk3366.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3366.dtsi
@@ -363,12 +363,33 @@
 		status = "disabled";
 	};
 
+	usbphy: phy {
+		compatible = "rockchip,rk336x-usb-phy";
+		rockchip,grf = <&grf>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		usbphy0: usb-phy0 {
+			#phy-cells = <0>;
+			#clock-cells = <0>;
+			reg = <0x700>;
+		};
+
+		usbphy1: usb-phy1 {
+			#phy-cells = <0>;
+			#clock-cells = <0>;
+			reg = <0x728>;
+		};
+	};
+
 	usb_host0_echi: usb@ff480000 {
 		compatible = "generic-ehci";
 		reg = <0x0 0xff480000 0x0 0x20000>;
 		interrupts = <GIC_SPI 24 IRQ_TYPE_LEVEL_HIGH>;
 		clocks = <&cru SCLK_OTG_PHY0>, <&cru HCLK_HOST>;
 		clock-names = "sclk_otgphy0", "hclk_host0";
+		phys = <&usbphy1>;
+		phy-names = "usb";
 		status = "disabled";
 	};
 
