lkl: Fix Kconfig error
At the moment, Kconfig recognizes "depends on not" as a part of a
circular dependency. Although this is a false positive, the warnings are
distracting, so this commit removes extra "negative dependencies" to
prevent the messages.

Signed-off-by: Patrick Collins <pscollins@google.com>

--- a/arch/lkl/Kconfig
+++ b/arch/lkl/Kconfig
@@ -1,6 +1,6 @@
 config LKL
        def_bool y
-       depends on !SMP && !MMU && !COREDUMP && !AUDITSYSCALL && !SECCOMP && !TRACEPOINTS && !UPROBES && !COMPAT && !USER_RETURN_NOTIFIER && !VT
+       depends on !SMP && !MMU && !COREDUMP && !SECCOMP && !UPROBES && !COMPAT && !USER_RETURN_NOTIFIER
        select ARCH_THREAD_INFO_ALLOCATOR
        select RWSEM_GENERIC_SPINLOCK
        select GENERIC_ATOMIC64
